--- a/tutorials/digital-clock/index.css
+++ b/tutorials/digital-clock/index.css
@@ -50,7 +50,7 @@ html, body {
 }
 
 .clock {
-	font-size: clamp(1rem, 15vw, 5rem);
+	font-size: 12vw;
 	text-align: center;
 	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.822);
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
